Fix highlighted-link on tablet screen

--- a/extensions/odoo_theme/static/style.scss
+++ b/extensions/odoo_theme/static/style.scss
@@ -101,6 +101,10 @@ header.o_main_header {
 
 
     .highlight-link {
+        @media only screen and (max-width: 1242px) and (min-width: 992px){
+            position: absolute;
+            bottom: 0;
+        }
         margin-bottom: 0;
         padding: 0 1rem;
         text-align: center;
